# landing-website

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
templates/: index.html
